Thu May 29 22:18:57 2014  Tanaka Akira  <akr@fsij.org>

	* test/lib/minitest/unit.rb (capture_subprocess_io): Close fds.

Thu May 29 19:47:08 2014  Tanaka Akira  <akr@fsij.org>

	* io.c (rb_io_s_pipe): Close pipes if io_encoding_set() raises an
	  exception.
	  (io_encoding_set_v): New function.

Thu May 29 19:42:49 2014  Tanaka Akira  <akr@fsij.org>

	* lib/csv.rb (CSV.open): Close the opened file when an exception
	  occur.

Thu May 29 19:31:10 2014  Tanaka Akira  <akr@fsij.org>

	* ext/openssl/lib/openssl/ssl.rb (SSLServer#accept): Close a socket
	  if any exception occur.

Thu May 29 05:05:29 2014  Eric Wong  <e@80x24.org>

	* include/ruby/ruby.h: Hide Symbol internals.
	  (struct RSymbol): moved to internal.h
	  (RSYMBOL): ditto

Thu May 29 00:28:56 2014  Tanaka Akira  <akr@fsij.org>

	* ext/socket/unixsocket.c (rsock_init_unixsock): Open a socket
	  after path length check.
	  This fixes a fd leak by TestSocket_UNIXSocket#test_too_long_path.

Wed May 28 23:04:35 2014  Tanaka Akira  <akr@fsij.org>

	* test/ruby/test_io.rb (test_flush_in_finalizer1): Use
	  ObjectSpace.each_object to close files.
	  GC.start is not reliable.

Wed May 28 19:00:31 2014  Tanaka Akira  <akr@fsij.org>

	* lib/net/imap.rb (Net::IMAP#initialize): Close the opened socket when
	  any exception occur.
	  This fixes a fd leak by IMAPTest#test_imaps_post_connection_check
	  which start_tls_session() raises an exception.

Wed May 28 18:06:13 2014  Tanaka Akira  <akr@fsij.org>

	* ext/openssl/ossl_ssl.c (ossl_ssl_close): Fix sync_close to work
	  when SSL is not started.
	  This fix the fd leak by test_https_proxy_authentication in
	  test/net/http/test_https_proxy.rb.

Wed May 28 10:29:28 2014  Eric Wong  <e@80x24.org>

	* vm.c (rb_vm_living_threads_foreach): remove function
	  [ruby-core:62745]
	* thread.c (terminate_i): remove
	* thread.c (terminate_all): implement (inlines old terminate_i)
	* thread.c (rb_thread_terminate_all): use terminate_all
	* thread.c (rb_thread_fd_close_i): remove